# The-Genome-Reader

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  CONTRACT.md  LICENSE  NEW_FEATURE.md  PITCH.md  PREBUILT.md  README.md  SPEC.md  app.js  background.js  biostat.py  eslint.config.mjs  index.html  learnwatch.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scoreboard.py  site.css  skaniwatch.sh  status.sh  tsconfig.json
api/: serve.py
app/: ConvexClientProvider.tsx  globals.css  layout.tsx  page.tsx
backend/: pyproject.toml
backend/genome_firewall/: __init__.py  config.py
backend/genome_firewall/layer1_ingestion/: cohort.py
backend/genome_firewall/layer2_features/: matrix.py
backend/genome_firewall/layer3_model/: random_forest.py  sampling.py  target_gate.py
backend/genome_firewall/layer4_scoring/: explanations.py  predictor.py
backend/genome_firewall/layer5_evaluation/: benchmark.py  metrics.py
backend/genome_firewall/schemas/: prediction.py
backend/genome_firewall/services/: evaluation_service.py  inference_service.py  training_service.py
backend/genome_firewall_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
components/: ascii-landing.tsx  genome-analysis-session.tsx  genome-reader.tsx  knowledge-tree.tsx  landing-page.tsx  liquid-title.tsx  report-view.tsx
convex/: README.md  analysis.ts  files.ts  patients.ts  report.ts  schema.ts  tsconfig.json
data/: DATA_SOURCES.md  breakpoints.yaml  clean_labels.py  dl_one.sh  drug_synonyms.yaml  manifest.json  pull_bvbrc.sh
(+233 files in other folders)
