[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-firewall-backend"
version = "0.2.0"
description = "Genome Firewall backend — AMR features + calibrated Random Forest scoring"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "biopython>=1.81",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["genome_firewall*"]

[project.scripts]
gf-train = "genome_firewall.cli.train:main"
gf-score = "genome_firewall.cli.score:main"
